# network-out-of-scanner-qc

./: README.md  pyproject.toml  setup_env.sh
src/network-behavior-qc/tests/: test_csv_operations.py  test_cued_task_switching_metrics.py  test_exclusion_utils.py  test_trimmed_behavior_utils.py
src/network-behavior-qc/utils/: exclusion_utils.py  globals.py
src/network-out-of-scanner-qc/: main.py  process_trimmed_with_scan_time.py
src/network-out-of-scanner-qc/qc/: qc.py
src/network-out-of-scanner-qc/tests/: test_basic_metrics.py  test_csv_operations.py  test_cued_task_switching_metrics.py  test_exclusion_utils.py  test_n_back_metrics.py  test_stop_signal_metrics.py  test_violations_utils.py
src/network-out-of-scanner-qc/utils/: config.py  exclusion_utils.py  globals.py  qc_utils.py  task_metrics.py  utils.py  violations_utils.py
tests/: test_basic_metrics.py
