[project]
name = "network-out-of-scanner-qc"
version = "0.1.0"
description = "Behavioral QC for network out-of-scanner data"
readme = "README.md"
authors = [
    { name = "Kriti Achyutuni", email = "kritiach@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.4",
]

[project.scripts]
network-out-of-scanner-qc = "network-out-of-scanner-qc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]

[tool.pytest.ini_options]
testpaths=['tests']

[tool.pyright]
exclude = ['.venv']
venvPath = '.'
venv = '.venv'

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["network-out-of-scanner-qc"]

[tool.hatch.build.targets.wheel]
packages = ["src/network-out-of-scanner-qc"]